--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Téléchargement des relevés bancaires mensuels en CSV, sans cliquer.",
   "main": "index.js",
-  "bin": "./bin/download.mjs",
+  "bin": "./bin/download.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "esm": "^3.0.8",
     "puppeteer": "^1.1.1"
   }
 }
